// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bar.js - flow-verify: bar.js 1`] = `
// @flow
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow

`;

exports[`foo.js - flow-verify: foo.js 1`] = `
// @flow
require('./bar');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
require("./bar");

`;
